Enhance secret sharing functions to allow the developer to provide evaluation points

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "__tree": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "unordered_set": "cpp"
     }
 }
