--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "queue": "cpp",
         "stack": "cpp",
         "ios": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "span": "cpp"
     }
 }
